<resources>
    <string name="app_name">Exzellenzkoch</string>
    <string name="register">Registrieren</string>
    <string name="email_address">Email Adresse</string>
    <string name="optional_user_id">Gib dir einen Nutzernamen (optional)</string>
    <string name="email_example">max.musterman@muster.de</string>
    <string name="password">Passwort</string>
    <string name="user_id">Nutzername</string>
    <string name="recipe_list_recipe_title">Meine Rezepte</string>
...
    <string name="admin_reported_item">TextView</string>
    <string name="spare_recipe">Entmelden</string>
    <string name="profile_display_username">Name</string>
    <string name="profile_display_user_description">Beschreibung</string>
    <string name="profile_display_erstellte_rezepte">veröffentlichte Rezepte</string>
    <string name="flag_user">Nutzer melden</string>
    <string name="profile_display_edit_profile_button">Profil Bearbeiten</string>

    <string name="enter_recipe_title">Rezepttitel eingeben</string>
    <string name="enter_preparing_time">Zeit eingeben</string>
    <string name="enter_cooking_time">Backzeit eingeben</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarisch</string>
...
    <string name="open">Öffnen</string>
    <string name="feed">Feed</string>
    <string name="menu">Menü</string>
    <string name="write_sth_about_you_headline">Schreibe etwas über dich</string>
    <string name="i_like_cooking_hint">Ich koche gerne...</string>
    <string name="change_login_data">Login Daten ändern</string>
    <string name="save">Speichern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="savoury__tag">herzhaft</string>
    <string name="sweet_tag">süß</string>
    <string name="salty_tag">salzig</string>
    <string name="publish">veröffentlichen</string>
    <string name="ingredient_input_description">Schreibe jede Zutaten und Kapitel so auf:
                                                #Zutaten\n
...
