...
            name="ProfileEditViewmodel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.ProfileEditViewmodel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="646dp"
            app:layout_constraintBottom_toTopOf="@+id/button_save_profile_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_change_login_data"
            app:layout_constraintStart_toEndOf="@+id/button_delete_profile" />

        <Button
            android:id="@+id/button_delete_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
...
